styling improvements to browser extension

--- a/browser_extension/src/popup.html
+++ b/browser_extension/src/popup.html
@@ -8,7 +8,8 @@
 </head>
 <body>
   <div class="header">
-    <img src="assets/icon.png" alt="poche" class="logo">
+    <img src="assets/icon_black.png" alt="poche" class="logo logo-black">
+    <img src="assets/icon_white.png" alt="poche" class="logo logo-white">
 
     <div class="header-right">
       <h1>poche</h1>
@@ -65,8 +66,6 @@
     <button id="saveButton" class="btn btn-primary btn-large">
       Save Article
     </button>
-
-    <div class="flex-filler"></div>
 
     <div class="user-info">
       <p>Logged in as: <strong id="userEmail"></strong></p>
