--- a/browser_extension/src/popup.html
+++ b/browser_extension/src/popup.html
@@ -63,6 +63,18 @@
       <p>Click the button below to save the current page as an article.</p>
     </div> -->
     
+    <div class="form-group">
+      <label for="tagsInput">Tags (comma-separated)</label>
+      <input 
+        type="text" 
+        id="tagsInput" 
+        name="tags" 
+        placeholder="e.g. tech, programming, web"
+        autocomplete="off"
+      />
+      <p class="form-hint">Separate multiple tags with commas</p>
+    </div>
+    
     <button id="saveButton" class="btn btn-primary btn-large">
       Save Article
     </button>
