--- a/webapp/index.html
+++ b/webapp/index.html
@@ -56,6 +56,9 @@
       }
     }
     </script>
+
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/366823aaef.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
